增加准备构建的语句

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Prepare Docker buildx platforms
+      run: docker run --privileged --rm tonistiigi/binfmt --install all
     - name: Show Docker buildx platforms
       run: docker buildx ls
