分开编译，测试编译时间

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,15 @@ jobs:
         docker run --privileged --rm tonistiigi/binfmt --install all
         docker buildx create --use --name builder
         docker buildx ls
-    - name: Build images
+    - name: Build image linux/amd64
       run: |
-        docker buildx build --platform linux/amd64,linux/arm/v7,linux/arm64,linux/ppc64le -t cpp-cmake:test .
+        docker buildx build --platform linux/amd64 -t cpp-cmake:test .
+    - name: Build image linux/arm/v7
+      run: |
+        docker buildx build --platform linux/arm/v7 -t cpp-cmake:test .
+    - name: Build image linux/arm64
+      run: |
+        docker buildx build --platform linux/arm64 -t cpp-cmake:test .
+    - name: Build image linux/ppc64le
+      run: |
+        docker buildx build --platform linux/ppc64le -t cpp-cmake:test .
