--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,4 +23,4 @@ jobs:
         docker buildx ls
     - name: Build image
       run: |
-        docker buildx build --platform ${{ matrix.docker-platform }} -t cpp-cmake:test-${{ matrix.docker-platform }} .
+        docker buildx build --platform ${{ matrix.docker-platform }} -t cpp-cmake:test .
