--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,11 +16,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Prepare Docker buildx
-      run: |
-        docker run --privileged --rm tonistiigi/binfmt --install all
-        docker buildx create --use --name builder
-        docker buildx ls
+    
+    -
+      name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    -
+      name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v1
+      
+    -
+      name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
     - name: Build image
       run: |
-        docker buildx build --platform ${{ matrix.docker-platform }} -t cpp-cmake:test .
+        docker buildx build --push --platform linux/amd64,linux/arm/v7,linux/arm64,linux/ppc64le -t cpp-cmake:latest .
