--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,8 +3,6 @@ name: Docker Image CI
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
 
@@ -31,4 +29,4 @@ jobs:
       
     - name: Build image
       run: |
-        docker buildx build --push --platform linux/amd64,linux/arm/v7,linux/arm64,linux/ppc64le -t "${{ secrets.DOCKERHUB_USERNAME }}/cpp-cmake:latest" .
+        docker buildx build --push --platform linux/amd64,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x -t "${{ secrets.DOCKERHUB_USERNAME }}/cpp-cmake:latest" .
